--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        <!-- A paragraph -->
        <p>Jack Matthew Cassidy Computer Engineer</p>
        <p>about me</p>
+       <p>Hello Chris Cassidy</p>
      
        <!-- Image of smiley face -->
        <img alt="Mitch Trubisky" src="https://cdn.vox-cdn.com/thumbor/P-IsEsgUVh01uETJftLSyvhVQL8=/0x0:2940x3840/1200x800/filters:focal(1163x1054:1633x1524)/cdn.vox-cdn.com/uploads/chorus_image/image/70988347/usa_today_18342204.0.jpg">
