--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Jack Cassidy</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
   
-<div class="container-fluid mt-3">
-  <h1>Three equal width columns</h1>
-  <p>Note: Try to add a new div with class="col" inside the row class - this will create four equal-width columns.</p>
-  <div class="row">
-    <div class="col p-3 bg-primary text-white">.col</div>
-    <div class="col p-3 bg-dark text-white">.col</div>
-    <div class="col p-3 bg-primary text-white">.col</div>
-  </div>
-</div>
+   <!-- Metadata for the page -->
+   <head>
+       <!-- Title of webpage in the browser -->
+       <title>Jack's Website</title>
+       <meta charset="UTF-8">
+   </head>
+  
+   <!-- All visible content on the page -->
+   <body>
+       <!-- Main page heading -->
+       <h1>Jack Cassidy</h1>
+     
+       <!-- A paragraph -->
+       <p>Jack Matthew Cassidy Computer Engineer</p>
+       <p>about me</p>
+       <p>Hello Chris Cassidy</p>
+     
+       <!-- Image of smiley face -->
+       <img alt="Mitch Trubisky" src="https://cdn.vox-cdn.com/thumbor/P-IsEsgUVh01uETJftLSyvhVQL8=/0x0:2940x3840/1200x800/filters:focal(1163x1054:1633x1524)/cdn.vox-cdn.com/uploads/chorus_image/image/70988347/usa_today_18342204.0.jpg">
 
-</body>
+       <a href="html/yo.html">Balls</a>
+   </body>
 </html>
